--- a/MyWeb/src/main/webapp/WEB-INF/web.xml
+++ b/MyWeb/src/main/webapp/WEB-INF/web.xml
@@ -9,10 +9,13 @@
 		
 		<param-value>
 		/WEB-INF/config/db-config.xml
-		/WEB-INF/config/email-config.xml
+		<!-- /WEB-INF/config/email-config.xml -->
 		</param-value>
 		
 	</context-param>
+	
+	
+	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -24,7 +27,11 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/config/servlet-config.xml</param-value>
+			<param-value>
+			/WEB-INF/config/servlet-config.xml
+			/WEB-INF/config/email-config.xml
+			/WEB-INF/config/interceptor-config.xml
+			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
